--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link href='http://fonts.googleapis.com/css?family=Alike' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div class="navbar">
+      <ul>
+        <li><a href="index.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+      </ul>
+    </div>
     <div class="bio-container">
       <div class="portrait">
       </div>
