--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
 
         <li>Freelance Journalist (2009-2012): Produced a wide range of radio and print stories from Brisbane, Australia and Seoul, South Korea. Created additional content for the web including video extras and photography. Topics covered include the Australian indie developer scene, struggles of North Korean refugees and the declining health of the Great Barrier Reef.</li><br>
 
-        <li>Chicago Public Radio (2004-2009): Produced and hosted the morning news and served as a general assignment reporter. Edited interviews, trained interns and facilitated news team's transition to new scriptwriting software and database. Main focuses as a reporter were city government, education and technology. Won awards from the Illinois Associated Press and Radio Television Digital News Association for reporting work.</li><br>
+        <li>Chicago Public Radio (2004-2009): Produced and hosted the morning news and served as a general assignment reporter. Edited interviews, trained interns and facilitated news team's transition to new scriptwriting software and database. Main focuses as a reporter were city government, education and technology. Won awards from the Illinois Associated Press and Radio Television Digital News Association for reporting work.</li>
       </ul>
 
       <h3>Education:</h3>
