Add reporting link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="main">
         <h1><a href="http://michaelrhee.com">Michael Rhee</a></h1>
         <h3><span>Multimedia journalist turned coder.</span></h3>
-        <p>I spent the last few years working in the Asia-Pacific region, reporting on the fast-growing cities of Seoul, South Korea and Brisbane, Australia. My strong interest in web technology and a desire to create more interactive experiences led me to enroll in Dev Bootcamp - a nine-week intensive program where I learned full-stack web development. I am extremely passionate about building compelling applications and am now looking to join a company that shares my enthusiasm for building great things.</p>
+        <p>I spent the last few years working in the Asia-Pacific region, <a class="reporting" href="http://michaelrhee.wordpress.com">reporting</a> on the fast-growing cities of Seoul, South Korea and Brisbane, Australia. My strong interest in web technology and a desire to create more interactive experiences led me to enroll in Dev Bootcamp - a nine-week intensive program where I learned full-stack web development. I am extremely passionate about building compelling applications and am now looking to join a company that shares my enthusiasm for building great things.</p>
       </div>
     </div>
     <div class="projects">
