--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,8 @@
       </ul>
     </div>
     <div class="resume">  
+      <h3>Location:</h3>
+      <p>Chicago, IL</p>
       <h3>Contact:</h3>
       <p>mjrhee [at] gmail [dot] com</p>
 
@@ -21,11 +23,13 @@
 
       <h3>Experience:</h3>
       <ul>
-        <li>Dev Bootcamp (August-October 2013): Built MVC web applications in Sinatra and Rails frameworks using Ruby, Javascript, HTML and CSS. Development process incorporated Scrum, Agile and Kanban methodologies. Worked as a teaching assistant, with a focus on Javascript and Active Record.</li><br>
+        <li>Co-Founder/Creator - <a class="visible-link" href="http://getyourcrayon.com">getYourCrayon</a> (October 2013): Developed original concept for a Chrome extension that allows users to create and share graffiti on the web. Led a small team of four developers in daily workflow using Scrum, Agile and Kanban methodologies. Worked closely on extension's Javascript-heavy front-end design and user interface. Currently alpha testing on Chrome Web Store.</li><br>
 
-        <li>Freelance Journalist (2009-2012): Produced a wide range of radio and print stories from Brisbane, Australia and Seoul, South Korea. Created additional content for the web including video extras and photography. Topics covered include the Australian indie developer scene, struggles of North Korean refugees and the declining health of the Great Barrier Reef.</li><br>
+        <li>Student/Teaching Assistant - <a class="visible-link" href="http://devbootcamp.com/faq/">Dev Bootcamp</a> (August-October 2013): Built MVC web applications in Sinatra and Rails frameworks using Ruby, Javascript, HTML and CSS. Development process incorporated Scrum, Agile and Kanban methodologies. Worked as a teaching assistant, with a focus on Javascript and Active Record.</li><br>
 
-        <li>Chicago Public Radio (2004-2009): Produced and hosted the morning news and served as a general assignment reporter. Edited interviews, trained interns and facilitated news team's transition to new scriptwriting software and database. Main focuses as a reporter were city government, education and technology. Won awards from the Illinois Associated Press and Radio Television Digital News Association for reporting work.</li>
+        <li><a class="visible-link" href="http://michaelrhee.wordpress.com/">Freelance Journalist</a> (2009-2012): Produced a wide range of radio and print stories from Brisbane, Australia and Seoul, South Korea. Created additional content for the web including video extras and photography. Topics covered include the Australian indie developer scene, struggles of North Korean refugees and the declining health of the Great Barrier Reef.</li><br>
+
+        <li>Producer/Reporter - <a class="visible-link" href="http://www.wbez.org/">Chicago Public Radio</a> (2004-2009): Produced and hosted the morning news and served as a general assignment reporter. Edited interviews, trained interns and facilitated news team's transition to new scriptwriting software and database. Main focuses as a reporter were city government, education and technology. Won awards from the Illinois Associated Press and Radio Television Digital News Association for reporting work.</li>
       </ul>
 
       <h3>Education:</h3>
