--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
       <p>mjrhee [at] gmail [dot] com</p>
 
       <h3>Skills:</h3>
-      <p>Ruby, Javascript, jQuery, Python, Rails, Active Record, AJAX, Postgresql, Git, HTML, CSS, SQL, Writing, Editing, Audio/Video Production</p>
+      <p>Ruby, Javascript, jQuery, Sinatra, Rails, Active Record, AJAX, Postgresql, Git, HTML, CSS, SQL, Agile</p>
 
       <h3>Experience:</h3>
       <ul>
@@ -35,6 +35,7 @@
       <h3>Education:</h3>
       <ul>
         <li>Dev Bootcamp, Chicago (August - October 2013): 9-Week Intensive Web Development Course</li><br>
+        <li>Coursera, Online (February-March 2013): Learn to Program 1 and 2 (Python)</li><br>
         <li>University of Wisconsin, Madison (1999-2003): BA - English Literature and Radio, TV and Film</li>
       </ul>
     </div>
