Change color of nav when on page

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <div class="navbar">
       <ul>
         <li><a href="index.html">About</a></li>
-        <li><a href="resume.html">Resume</a></li>
+        <li style="color:#84B39D;">Resume</li>
       </ul>
     </div>
     <div class="resume">  
@@ -38,6 +38,12 @@
         <li>Coursera, Online (February-March 2013): Learn to Program 1 and 2 (Python)</li><br>
         <li>University of Wisconsin, Madison (1999-2003): BA - English Literature and Radio, TV and Film</li>
       </ul>
+    </div>
+    <div class="icons">
+      <a href="https://github.com/vertigokidd"><i class="icon-github"></i></a>
+      <a href="http://www.linkedin.com/pub/michael-rhee/73/352/627"><i class="icon-linkedin-sign"></i></a>
+      <a href="https://twitter.com/rheedio"><i class="icon-twitter"></i></a>
+      <a href="http://elegantalgorithm.tumblr.com"><i class="icon-tumblr-sign"></i></a>
     </div>
   </body>
 </html>
