--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="navbar">
       <ul>
-        <li><a href="index.html">About</a></li>
+        <li style="color:#84B39D;">About</li>
         <li><a href="resume.html">Resume</a></li>
       </ul>
     </div>
