--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </ul>
     </div>
     <div class="icons">
+      <a href="mailto:mjrhee[at]gmail[dot]com"><i class="icon-envelope-alt"></i></a>
       <a href="https://github.com/vertigokidd"><i class="icon-github"></i></a>
       <a href="http://www.linkedin.com/pub/michael-rhee/73/352/627"><i class="icon-linkedin-sign"></i></a>
       <a href="https://twitter.com/rheedio"><i class="icon-twitter"></i></a>
