--- a/resume.html
+++ b/resume.html
@@ -21,9 +21,17 @@
       <h3>Skills:</h3>
       <p>Ruby, Javascript, jQuery, Sinatra, Rails, Active Record, AJAX, Postgresql, Git, HTML, CSS, SQL, Agile</p>
 
+      <h3>Projects:</h3>
+      <ul>
+        <li><a class="visible-link" href="http://getyourcrayon.com">getYourCrayon</a> (October 2013-ongoing): Developed original concept for a Chrome extension that allows users to create and share graffiti on the web. Led a small team of four developers in daily workflow using Scrum, Agile and Kanban methodologies. Worked closely on extension's Javascript-heavy front-end design and user interface. Currently alpha testing on Chrome Web Store.</li><br>
+
+        <li><a class="visible-link" href="http://maiku.me">Maiku</a> (September 2013-ongoing): Developed and designed a haiku poetry maker that dynamically counts syllables for users using Javascript. Uses Oauth to share poems via Twitter. Built on the Sinatra framework.</li><br>
+
+        <li><a class="visible-link" href="http://www.abc.net.au/radionational/programs/creativeinstinct/game-state/4423576">Game State</a> (December 2012): Produced a radio documentary for the Australian Broadcasting Corporation about the rebirth of the independent game developer community in Brisbane.</li>
+
+      </ul>
       <h3>Experience:</h3>
       <ul>
-        <li>Co-Founder/Creator - <a class="visible-link" href="http://getyourcrayon.com">getYourCrayon</a> (October 2013): Developed original concept for a Chrome extension that allows users to create and share graffiti on the web. Led a small team of four developers in daily workflow using Scrum, Agile and Kanban methodologies. Worked closely on extension's Javascript-heavy front-end design and user interface. Currently alpha testing on Chrome Web Store.</li><br>
 
         <li>Student/Teaching Assistant - <a class="visible-link" href="http://devbootcamp.com/faq/">Dev Bootcamp</a> (August-October 2013): Built MVC web applications in Sinatra and Rails frameworks using Ruby, Javascript, HTML and CSS. Development process incorporated Scrum, Agile and Kanban methodologies. Worked as a teaching assistant, with a focus on Javascript and Active Record.</li><br>
 
