--- a/thoughtbot.html
+++ b/thoughtbot.html
@@ -12,22 +12,22 @@
       <li><a href="resume.html">Resume</a></li>
     </ul>
   </div>
-<div class="letter">
-<p>Dear thoughbot,</p>
+  <div class="letter">
+    <p>Dear thoughtbot,</p>
 
-<p>Starting over can be hard, unless you really believe in changing your life.<p>
+    <p>Starting over can be hard, unless you really believe in changing your life.<p>
 
-<p>I spent much of the last eight years working as a radio producer -- in Chicago, Seoul and Brisbane -- crafting what I thought were <a class="visible-link" href="http://pri.org/stories/2010-06-25/legacy-korean-war">important</a>, <a class="visible-link" href="http://www.youtube.com/watch?v=tZdCGJTQh2w">compelling</a> stories about incredible <a class="visible-link" href="http://pri.org/stories/2012-10-29/fijian-band-rosiloa-keeps-culture-alive-through-music">individuals</a>. The work was hugely gratifying.</p>
+    <p>I spent much of the last eight years working as a radio producer -- in Chicago, Seoul and Brisbane -- crafting what I thought were <a class="visible-link" href="http://pri.org/stories/2010-06-25/legacy-korean-war">important</a>, <a class="visible-link" href="http://www.youtube.com/watch?v=tZdCGJTQh2w">compelling</a> stories about incredible <a class="visible-link" href="http://pri.org/stories/2012-10-29/fijian-band-rosiloa-keeps-culture-alive-through-music">individuals</a>. The work was hugely gratifying.</p>
 
-<p>But as I watched the web evolve, I realized I was missing out on a revolution in communication. I wanted to learn the tools to tell better, more interactive stories, and create great experiences for people. Knowing that, starting over was the only choice I had.</p>
+    <p>But as I watched the web evolve, I realized I was missing out on a revolution in communication. I wanted to learn the tools to tell better, more interactive stories, and create great experiences for people. Knowing that, starting over was the only choice I had.</p>
 
-<p>I recently finished Dev Bootcamp in Chicago. It has been one of the most incredible experiences of my life. These are the <a class="visible-link" href="http://maiku.me">projects</a> I <a class="visible-link" href="https://chrome.google.com/webstore/detail/getyourcrayon-alpha/pbkgodffljfhdlinelnhklhcdoiedbej">made</a> that I am most proud of. Though I feel empowered as a beginning developer, I want to learn more, become better.</p>
+    <p>I recently finished Dev Bootcamp in Chicago. It has been one of the most incredible experiences of my life. These are the <a class="visible-link" href="http://maiku.me">projects</a> I <a class="visible-link" href="https://chrome.google.com/webstore/detail/getyourcrayon-alpha/pbkgodffljfhdlinelnhklhcdoiedbej">made</a> that I am most proud of. Though I feel empowered as a beginning developer, I want to learn more, become better.</p>
 
-<p>thoughtbot is one of the most cutting-edge development studios out there. Your work is <a class="visible-link" href="https://github.com/thoughtbot/factory_girl/tree/master">inspiring</a> and <a class="visible-link" href="http://jsfiddle.net/kHJr6/2/">fun</a>. You are also <a class="visible-link" href="https://learn.thoughtbot.com/prime">leaders in teaching</a> development online. As an apprentice, I know I will be able to <a class="visible-link" href="http://robots.thoughtbot.com/post/19951586635/why-i-chose-apprentice-io">work</a> on client code, not just brew coffee. Also, I love <a class="visible-link" href="http://en.wikipedia.org/wiki/Lagavulin_distillery">scotch</a>. You do, <a class="visible-link" href="https://www.facebook.com/photo.php?fbid=525490257527856&set=a.497966776946871.1073741825.103165183093701&type=1&theater">too</a>. I can't think of a better place to take my next steps as a developer.</p>
-<p>I hope we can talk soon.</p>
+    <p>thoughtbot is one of the most cutting-edge development studios out there. Your work is <a class="visible-link" href="https://github.com/thoughtbot/factory_girl/tree/master">inspiring</a> and <a class="visible-link" href="http://jsfiddle.net/kHJr6/2/">fun</a>. You are also <a class="visible-link" href="https://learn.thoughtbot.com/prime">leaders in teaching</a> development online. As an apprentice, I know I will be able to <a class="visible-link" href="http://robots.thoughtbot.com/post/19951586635/why-i-chose-apprentice-io">work</a> on client code, not just brew coffee. Also, I love <a class="visible-link" href="http://en.wikipedia.org/wiki/Lagavulin_distillery">scotch</a>. You do, <a class="visible-link" href="https://www.facebook.com/photo.php?fbid=525490257527856&set=a.497966776946871.1073741825.103165183093701&type=1&theater">too</a>. I can't think of a better place to take my next steps as a developer.</p>
+    <p>I hope we can talk soon.</p>
 
-<p>Best,</p>
-<p><a class="visible-link" href="http://michaelrhee.com">Michael Rhee</a></p>
+    <p>Best,</p>
+    <p><a class="visible-link" href="http://michaelrhee.com">Michael Rhee</a></p>
   </div>
   </body>
 </html>
