--- a/thoughtbot.html
+++ b/thoughtbot.html
@@ -17,7 +17,7 @@
 
     <p>Starting over can be hard, unless you really believe in changing your life.<p>
 
-    <p>I spent much of the last eight years working as a radio producer -- in Chicago, Seoul and Brisbane -- crafting what I thought were <a class="visible-link" href="http://pri.org/stories/2010-06-25/legacy-korean-war">important</a>, <a class="visible-link" href="http://www.youtube.com/watch?v=tZdCGJTQh2w">compelling</a> stories about incredible <a class="visible-link" href="http://pri.org/stories/2012-10-29/fijian-band-rosiloa-keeps-culture-alive-through-music">individuals</a>. The work was hugely gratifying.</p>
+    <p>I spent much of the last eight years working as a radio producer -- in Chicago, Seoul and Brisbane -- crafting <a class="visible-link" href="http://pri.org/stories/2010-06-25/legacy-korean-war">important</a>, <a class="visible-link" href="http://www.youtube.com/watch?v=tZdCGJTQh2w">compelling</a> stories about incredible <a class="visible-link" href="http://pri.org/stories/2012-10-29/fijian-band-rosiloa-keeps-culture-alive-through-music">individuals</a>. The work was hugely gratifying.</p>
 
     <p>But as I watched the web evolve, I realized I was missing out on a revolution in communication. I wanted to learn the tools to tell better, more interactive stories, and create great experiences for people. Knowing that, starting over was the only choice I had.</p>
 
