Fix styling on resume

--- a/resume.html
+++ b/resume.html
@@ -23,21 +23,21 @@
 
       <h3>Projects:</h3>
       <ul>
-        <li><a class="visible-link" href="http://getyourcrayon.com">getYourCrayon</a> <span>(October 2013-ongoing)</span><p>Developed original concept for a Chrome extension that allows users to create and share graffiti on the web. Led a small team of four developers in daily workflow using Scrum, Agile and Kanban methodologies. Worked closely on extension's Javascript-heavy front-end design and user interface. Currently alpha testing on Chrome Web Store.</p></li><br>
+        <li><a class="visible-link company" href="http://getyourcrayon.com">getYourCrayon</a> <span>(October 2013-ongoing)</span><p>Developed original concept for a Chrome extension that allows users to create and share graffiti on the web. Led a small team of four developers in daily workflow using Scrum, Agile and Kanban methodologies. Worked closely on extension's Javascript-heavy front-end design and user interface. Currently alpha testing on Chrome Web Store.</p></li><br>
 
-        <li><a class="visible-link" href="http://maiku.me">Maiku</a><span>(September 2013-ongoing)</span><p>Developed and designed a haiku poetry maker that dynamically counts syllables for users using Javascript. Uses Oauth to share poems via Twitter. Built on the Sinatra framework.</p></li><br>
+        <li><a class="visible-link company" href="http://maiku.me">Maiku</a><span>(September 2013-ongoing)</span><p>Developed and designed a haiku poetry maker that dynamically counts syllables for users using Javascript. Uses Oauth to share poems via Twitter. Built on the Sinatra framework.</p></li><br>
 
-        <li><a class="visible-link" href="http://www.abc.net.au/radionational/programs/creativeinstinct/game-state/4423576">Game State</a><span>(December 2012)</span><p>Produced a radio documentary for the Australian Broadcasting Corporation about the rebirth of the independent game developer community in Brisbane.</p></li>
+        <li><a class="visible-link company" href="http://www.abc.net.au/radionational/programs/creativeinstinct/game-state/4423576">Game State</a><span>(December 2012)</span><p>Produced a radio documentary for the Australian Broadcasting Corporation about the rebirth of the independent game developer community in Brisbane.</p></li>
 
       </ul>
       <h3>Experience:</h3>
       <ul>
 
-        <li><a class="visible-link" href="http://devbootcamp.com/faq/">Dev Bootcamp</a><span>(August-October 2013)</span><p class="title">Student/Teaching Assistant</p><p>Built MVC web applications in Sinatra and Rails frameworks using Ruby, Javascript, HTML and CSS. Development process incorporated Scrum, Agile and Kanban methodologies. Worked as a teaching assistant, with a focus on Javascript and Active Record.</li><br>
+        <li><a class="visible-link company" href="http://devbootcamp.com/faq/">Dev Bootcamp</a><span>(August-October 2013)</span><p class="title">Student/Teaching Assistant</p><p>Built MVC web applications in Sinatra and Rails frameworks using Ruby, Javascript, HTML and CSS. Development process incorporated Scrum, Agile and Kanban methodologies. Worked as a teaching assistant, with a focus on Javascript and Active Record.</li><br>
 
-        <li><a class="visible-link" href="http://michaelrhee.wordpress.com/">Freelance Journalist</a><span>(2009-2012)</span><p>Produced a wide range of radio and print stories from Brisbane, Australia and Seoul, South Korea. Created additional content for the web including video extras and photography. Topics covered include the Australian indie developer scene, struggles of North Korean refugees and the declining health of the Great Barrier Reef.</p></li><br>
+        <li><a class="visible-link company" href="http://michaelrhee.wordpress.com/">Freelance Journalist</a><span>(2009-2012)</span><p>Produced a wide range of radio and print stories from Brisbane, Australia and Seoul, South Korea. Created additional content for the web including video extras and photography. Topics covered include the Australian indie developer scene, struggles of North Korean refugees and the declining health of the Great Barrier Reef.</p></li><br>
 
-        <li><a class="visible-link" href="http://www.wbez.org/">Chicago Public Radio</a><span>(2004-2009)</span><p class="title">Producer/Reporter</p><p>Produced and hosted the morning news and served as a general assignment reporter. Edited interviews, trained interns and facilitated news team's transition to new scriptwriting software and database. Main focuses as a reporter were city government, education and technology. Won awards from the Illinois Associated Press and Radio Television Digital News Association for reporting work.</p></li>
+        <li><a class="visible-link company" href="http://www.wbez.org/">Chicago Public Radio</a><span>(2004-2009)</span><p class="title">Producer/Reporter</p><p>Produced and hosted the morning news and served as a general assignment reporter. Edited interviews, trained interns and facilitated news team's transition to new scriptwriting software and database. Main focuses as a reporter were city government, education and technology. Won awards from the Illinois Associated Press and Radio Television Digital News Association for reporting work.</p></li>
       </ul>
 
       <h3>Education:</h3>
