Add source link

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -31,5 +31,7 @@
   <div>
     <button id="newGame">New Game</button>
   </div>
+  <br>
+  <a href="https://github.com/vertigokidd/tictactoe">Source</a>
 </body>
 </html>
