Add footer link

--- a/jobs.html
+++ b/jobs.html
@@ -59,5 +59,6 @@ input:checked+label{
 </head>
 <body>
 
+<footer>Data from the <a href="http://www.bls.gov/news.release/empsit.toc.htm">US Bureau of Labor Statistics</a></footer>
 </body>
 </html>
