Add desktop version to header

--- a/space_shooter.html
+++ b/space_shooter.html
@@ -116,7 +116,7 @@
 		</style>
 	</head>
 	<body>
-		<p class="header"><span></span>Space Shooter</p>
+		<p class="header"><span></span>Space Shooter (Desktop Version)</p>
 		<div class="content">
 			<div id="unityPlayer">
 				<div class="missing">
