Add sidebar, fix styling

--- a/index.html
+++ b/index.html
@@ -1,63 +1,20 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="navbar">
+    <div class="sidebar">
+      <h1>Michael Rhee</h1>
       <ul>
-        <li style="color:#84B39D;">About</li>
+        <li>About</li>
         <li><a href="resume.html">Resume</a></li>
       </ul>
     </div>
-    <div class="bio-container">
-      <div class="main">
-        <h1><a href="http://michaelrhee.com">Michael Rhee</a></h1>
-        <h3><span>Multimedia journalist turned coder.</span></h3>
-        <p>I spent the last few years working in the Asia-Pacific region, <a class="visible-link" href="http://michaelrhee.wordpress.com">reporting</a> on the fast-growing cities of Seoul, South Korea and Brisbane, Australia. My strong interest in web technology and a desire to create more interactive experiences led me to enroll in Dev Bootcamp - a nine-week intensive program where I learned full-stack web development. I am extremely passionate about building compelling applications and am now looking to join a company that shares my enthusiasm for building great things.</p>
-      </div>
-    </div>
-    <div class="projects">
-      <div class="projects-header">
-        <h2>Recent Projects:</h2>
-      </div>
-      <ul>
-        <ul>
-          <li>
-            <div>
-              <a href="http://getyourcrayon.com"><img src="images/crayonss.png"></a>
-              <a href="http://getyourcrayon.com"><p>getYourCrayon.com</p></a>
-              <p>A Chrome extension for drawing on websites.<p>
-              <p>(Ruby, Javascript, Chrome, Rails, Postgres)<p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a href="http://maiku.me"><img src="images/maikuss.png"></a>
-              <a href="http://maiku.me"><p>Maiku.me</p></a>
-              <p>A site designed to help users write Haikus by counting syllables for them.<p>
-              <p>(Ruby, Javascript, Sinatra, OAuth)<p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a href="http://askdeebs.herokuapp.com"><img src="images/askdeebss.png"></a>
-              <a href="http://askdeebs.herokuapp.com"><p>askdeebs.herokuapp.com</p></a>
-              <p>A Stack Overflow clone for Dev Bootcamp students.<p>
-              <p>(Ruby, Javascript, Rails, OAuth, Postgres)<p>
-            </div>
-          </li>
-        </ul>
-      </ul>
-    </div>
-    <div class="icons">
-      <a href="mailto:mjrhee[at]gmail[dot]com"><i class="icon-envelope-alt"></i></a>
-      <a href="https://github.com/vertigokidd"><i class="icon-github"></i></a>
-      <a href="http://www.linkedin.com/pub/michael-rhee/73/352/627"><i class="icon-linkedin-sign"></i></a>
-      <a href="https://twitter.com/rheedio"><i class="icon-twitter"></i></a>
-      <a href="http://elegantalgorithm.tumblr.com"><i class="icon-tumblr-sign"></i></a>
+    <div class="main">
+      <p>It was a dog. It was a big dog.<br><br>How about a magic trick? I'm gonna make this pencil disappear. Ta-da!<br><br>I'm Gotham's reckoning. It'll end the ball of damns you've all been living on. A necessary evil.<br><br>Pretty soon we will be chasing down over due library books.<br><br>Never steal anything from someone you can't outrun, kid!<br><br>Don't kill him. I want him to feel the heat. Feel the fire of 12 million souls.<br><br>I'm not sure you made it loud enough, sir.<br><br>Bruce Wayne! Design, live and breathe. What brings you out of the prior sleep, Mr. Wayne?<br><br>My mother warned me about getting into cars with strange men.<br><br>You don't owe these people anymore. You've given them everything.<br><br>Are you so desperate to fight criminals that you lock yourself in to take them on one at a time ?<br><br>It will be extremely painful... for you<br><br>Ah yes! I was wondering what would weight first. Your spirit... or your body?<br><br>I'm here to ensure the League of Shadow fulfills its duty to restore balance to civilization. You yourself fought the decadence of Gotham for years with all your strength, all your resources, all your moral authority. And the only victory you achieved was a lie. Now, you understand? Gotham is beyond saving and must be allowed to die.<br><br>You can swapnot sleeping in a penthouse... for not sleeping in a mansion. Whenever you stitch yourself up, you do make a bloody mess.<br><br>Maybe someday, when Gotham no longer needs Batman I'll see him again.<br><br>I hope you're not a member of the fire brigade.<br><br>I think you and your friend have found the last game in town. where it hurts, their wallets. It's bold. You gonna count me in?<br><br>I told you I was immortal. Oh there are many forms of immortality.<br><br>But we've met before. That was a long time ago, I was a kid at St. Swithin's, It used to be funded by the Wayne Foundation. It's an o...</p>
     </div>
   </body>
 </html>
