--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <div class="sidebar">
       <h1>Michael Rhee</h1>
       <ul>
-        <li>About</li>
-        <li><a href="resume.html">Resume</a></li>
+        <li><a href="/index.html">Projects</a></li>
+        <li><a href="/experiments.html">Experiments</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul>
     </div>
     <div class="emptyheader"></div>
