--- a/shadowcube.html
+++ b/shadowcube.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="three.min.js"></script>
-    <script src="box.js"></script>
+    <script src="js/three.min.js"></script>
+    <script src="js/box.js"></script>
   </body>
 </html>
