--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <div class="emptyheader"></div>
     <div class="main">
+      <img class="screencap" src="images/gycshot.png">
       <h1><a href="https://chrome.google.com/webstore/detail/getyourcrayon-beta/pbkgodffljfhdlinelnhklhcdoiedbej">Get Your Crayon</a></h1>
       <p>A Chrome extension designed to allow anyone to draw on any webpage and share it with the world. Developed with classmates at Dev Bootcamp, Chicago (2014).</p>
     </div>
