--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <div class="main">
       <img class="screencap" src="images/gycshot.png">
       <h1><a href="https://chrome.google.com/webstore/detail/getyourcrayon-beta/pbkgodffljfhdlinelnhklhcdoiedbej">Get Your Crayon</a></h1>
-      <p>A Chrome extension designed to allow anyone to draw on any webpage and share it with the world. Developed with classmates at Dev Bootcamp, Chicago (2014).</p>
+      <p>A Chrome extension designed to allow anyone to draw on any webpage and share it with the world. Uses <a href="http://paperjs.org/">paper.js</a> to render vectors. Developed with classmates at Dev Bootcamp, Chicago (2014).</p>
+      <br><br><br>
+      <img class="screencap" src="images/maikushot.png">
+      <h1><a href="http://maiku.me">Maiku</a></h1>
+      <p>Making haiku poems easier to make. A simple web app that helps users count syllables of words as they write, allowing them to post to <a href="https://twitter.com/maikuapp">Twitter</a> when they're done. Dynamic Javascript front-end.</p>
+      <br><br><br>
     </div>
   </body>
 </html>
