--- a/about.html
+++ b/about.html
@@ -17,8 +17,16 @@
     </div>
     <div class="emptyheader"></div>
     <div class="main">
-
+      <br>
+      <p>I'm interested in building unique, interactive experiences using technology. Currently working for Branchbird as a data integrator, designer and software consultant.</p>
+      <br><br>
+      <p>Favorite langauges: Ruby and Javascript</p>
+      <br>
+      <p>Preferred platform: OS X</p>
+      <br>
+      <p>Ideal volume for music: 96 db</p>
       <br><br><br>
+      <p><a href="mailto:mjrhee[at]gmail[dot]com">Email me</a></p>
     </div>
   </body>
 </html>
