--- a/ephemera.html
+++ b/ephemera.html
@@ -18,9 +18,12 @@
     </div>
     <div class="emptyheader"></div>
     <div class="main">
-      <img class="screenshot" src="images/box.png">
-      <h1>3D Modeling</h1>
-      <p><a href="/shadowcube.html">Cube</a><p>
+      <br>
+      <p><a href="https://twitter.com/rheedio">Twitter</a></p>
+      <br>
+      <p><a href="http://www.linkedin.com/pub/michael-rhee/73/352/627/">LinkedIn</a></p>
+      <br>
+      <p><a href="https://github.com/vertigokidd">Github</a></p>
       <br><br><br>
     </div>
   </body>
