--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="/index.html">Projects</a></li>
         <li><a href="/experiments.html">Experiments</a></li>
         <li><a href="/about.html">About</a></li>
+        <li><a href="/ephemera.html">Ephemera</a></li>
       </ul>
     </div>
     <div class="emptyheader"></div>
