Edit about page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <div class="emptyheader"></div>
     <div class="main">
       <br>
-      <p>I'm interested in building unique, interactive experiences using technology. Currently working for Branchbird as a data integrator, designer and software consultant.</p>
+      <p>I'm interested in building unique, interactive experiences using technology. Currently working for Branchbird in Chicago as a data integrator, designer and software consultant. Also working on my first mobile game.</p>
       <br><br>
       <p>Favorite langauges: Ruby and Javascript</p>
       <br>
@@ -27,7 +27,6 @@
       <br>
       <p>Ideal volume for music: 96 db</p>
       <br><br><br>
-      <p><a href="mailto:mjrhee[at]gmail[dot]com">Email me</a></p>
     </div>
   </body>
 </html>
