--- a/ephemera.html
+++ b/ephemera.html
@@ -19,6 +19,8 @@
     <div class="emptyheader"></div>
     <div class="main">
       <br>
+      <p><a href="mailto:mjrhee[at]gmail[dot]com">Email</a></p>
+      <br>
       <p><a href="https://twitter.com/rheedio">Twitter</a></p>
       <br>
       <p><a href="http://www.linkedin.com/pub/michael-rhee/73/352/627/">LinkedIn</a></p>
