--- a/ephemera.html
+++ b/ephemera.html
@@ -21,6 +21,8 @@
       <br>
       <p><a href="mailto:mjrhee[at]gmail[dot]com">Email</a></p>
       <br>
+      <p><a href="http://elegantalgorithm.tumblr.com">Blog</a></p>
+      <br>
       <p><a href="https://twitter.com/rheedio">Twitter</a></p>
       <br>
       <p><a href="http://www.linkedin.com/pub/michael-rhee/73/352/627/">LinkedIn</a></p>
