--- a/experiments.html
+++ b/experiments.html
@@ -20,6 +20,7 @@
     <div class="main">
       <img class="screenshot" src="images/box.png">
       <h1>3D Modeling</h1>
+      <p>Rendering 3D objects in the browser using <a href="http://threejs.org/">three.js</a>, playing with variations on lighting and camera control.</p><br>
       <p><a href="/shadowcube.html">Cube</a><p>
       <br><br><br>
     </div>
