Add camera tracking js

--- a/experiments.html
+++ b/experiments.html
@@ -22,6 +22,7 @@
       <h1>3D Modeling</h1>
       <p>Rendering 3D objects in the browser using <a href="http://threejs.org/">three.js</a>, playing with variations on lighting and camera control.</p><br>
       <p><a href="/shadowcube.html">Cube</a><p>
+      <p><a href="/shadowcube2.html">Cube 2</a><p>
       <br><br><br>
     </div>
   </body>
