--- a/shadowcube2.html
+++ b/shadowcube2.html
@@ -6,6 +6,6 @@
   <body>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="js/three.min.js"></script>
-    <script src="js/cube.js"></script>
+    <script src="js/cube2.js"></script>
   </body>
 </html>
