Add cube 3, spherical tracking

--- a/experiments.html
+++ b/experiments.html
@@ -21,8 +21,9 @@
       <img class="screenshot" src="images/box.png">
       <h1>3D Modeling</h1>
       <p>Rendering 3D objects in the browser using <a href="http://threejs.org/">three.js</a>, playing with variations on lighting and camera control.</p><br>
-      <p><a href="/shadowcube.html">Cube (dynamic camera, tilt/swivel)</a><p>
+      <p><a href="/shadowcube.html">Cube (dynamic camera, free tilt/swivel)</a><p>
       <p><a href="/shadowcube2.html">Cube 2 (dynamic camera, fixed horizontal tracking)</a><p>
+      <p><a href="/shadowcube3.html">Cube 3 (dynamic camera, free spherical tracking)</a><p>
       <br><br><br>
     </div>
   </body>
