--- a/experiments.html
+++ b/experiments.html
@@ -24,6 +24,7 @@
       <p><a href="/shadowcube.html">Cube (dynamic camera, free tilt/swivel)</a><p>
       <p><a href="/shadowcube2.html">Cube 2 (dynamic camera, fixed horizontal tracking)</a><p>
       <p><a href="/shadowcube3.html">Cube 3 (dynamic camera, free spherical tracking)</a><p>
+      <p><a href="/shadowcube4.html">Cube 4 (circular motion + dynamic camera)</a><p>
       <br><br><br>
     </div>
   </body>
