--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <div class="emptyheader"></div>
     <div class="main">
       <br>
-      <p>I'm interested in building unique, interactive experiences using technology. Currently working for Branchbird in Chicago as a data integrator, designer and software consultant. Also working on my first mobile game.</p>
+      <p>I'm interested in building unique, interactive experiences using technology. Currently working for Branchbird in Chicago as a data integrator, designer and software consultant. I write and record <a href="http://vertigokidd.bandcamp.com/track/dont-stop-now">music</a> in my spare time.</p>
       <br><br>
       <p>Favorite langauges: Ruby and Javascript</p>
       <br>
