--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>The Big Picture</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
+                <h1>Life of a Keurig</h1>
+                <p>What happens when you monitor the electricity consumption of an office coffee maker.</p>
+                <div id="chart1"></div>
             </div>
         </div>
         <!-- /.row -->
@@ -78,6 +79,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/d3.min.js"></script>
+    <script src="js/keurig.js"></script>
+
 
 </body>
 
