--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         </div>
         <!-- /.row -->
     </div>
-
+    <!-- Spacer -->
+    <div id="spacer"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
