Remove dumb line

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <a name="about" class="page_link"><h1>About</h1></a>
-                <p>I monitored the electricity usage of an office Keurig machine over the course of two weeks in May/June 2016. The hardware included a <a href="https://learn.adafruit.com/tweet-a-watt/overview-1">hacked wattage meter</a> and a Raspberry Pi, which streamed data to AWS every two seconds. That data was collected, processed, and stored completely in the AWS cloud using Kinesis, S3, Lambda, and EC2.<p><br>
-                <p>I'm a data engineer specializing in Hadoop and AWS.</p>
+                <p>I monitored the electricity usage of an office Keurig machine over the course of two weeks in May/June 2016. The hardware included a <a href="https://learn.adafruit.com/tweet-a-watt/overview-1">hacked wattage meter</a> and a Raspberry Pi, which streamed data to AWS every two seconds. That data was collected, processed, and stored completely in the AWS cloud using Kinesis, S3, Lambda, and EC2.<p>
                 <br>
             </div>
             <div id="chart1"></div>
