--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <a name="about" class="page_link"><h1>About</h1></a>
                 <p>I monitored the electricity usage of an office Keurig machine over the course of two weeks in May/June 2016. The hardware included a <a href="https://learn.adafruit.com/tweet-a-watt/overview-1">hacked wattage meter</a> and a Raspberry Pi, which streamed data to AWS every two seconds. That data was collected, processed, and stored completely in the AWS cloud using Kinesis, S3, Lambda, and EC2. The visualization is powered by D3.<p>
                 <br>
+                <p id="credit">photo credit: <a href="https://flic.kr/p/d4YBYy">taichi nishida</a></p>
             </div>
             <div id="chart1"></div>
         </div>
