--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-8 col-sm-12">
                 <h1>Life of a Keurig</h1>
                 <p>What happens when you monitor the electricity consumption of an office coffee maker.</p>
             </div>
@@ -71,7 +71,7 @@
     <div id="spacer"></div>
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-8 col-sm-12 col-sm-offset-0">
                 <a name="about" class="page_link"><h1>About</h1></a>
                 <p>I monitored the electricity usage of an office Keurig machine over the course of several weeks in 2016. The hardware included a <a href="https://learn.adafruit.com/tweet-a-watt/overview-1">hacked wattage meter</a> and a Raspberry Pi, which streamed data to AWS every two seconds. That data was collected, processed, and stored completely in the AWS cloud using Amazon Kinesis, S3, Lambda, and EC2. The visualization is powered by D3.<p>
                 <br>
