unhide nav list

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="navbar-brand" href="#">Michael Rhee</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="#about">About</a>
@@ -50,7 +50,7 @@
                         <a href="https://www.twitter.com/rheedio"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
                     </li>
                 </ul>
-            </div>
+            <!-- </div> -->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -71,7 +71,7 @@
     <div id="spacer"></div>
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-sm-12 col-sm-offset-0">
+            <div class="col-md-8 col-sm-12">
                 <a name="about" class="page_link"><h1>About</h1></a>
                 <p>I monitored the electricity usage of an office Keurig machine over the course of several weeks in 2016. The hardware included a <a href="https://learn.adafruit.com/tweet-a-watt/overview-1">hacked wattage meter</a> and a Raspberry Pi, which streamed data to AWS every two seconds. That data was collected, processed, and stored completely in the AWS cloud using Amazon Kinesis, S3, Lambda, and EC2. The visualization is powered by D3.<p>
                 <br>
